--- a/.github/workflows/deploying.yaml
+++ b/.github/workflows/deploying.yaml
@@ -22,7 +22,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: metrasensor/aiops-agent
+          images: metrasensor/promagent
           tags: type=ref,event=tag
 
       - name: Build and push Docker image
