--- a/telegraf.conf
+++ b/telegraf.conf
@@ -40,7 +40,7 @@
 
 # https://github.com/influxdata/telegraf/blob/release-1.9/plugins/outputs/http/README.md
 [[outputs.http]]
-  url = "https://receiver.metrasensor.com/$PROJECT_UUID"
+  url = "http://$RECEIVER_HOST/$PROJECT_UUID"
   timeout = "5s"
   method = "POST"
   data_format = "json"
